feat: 添加model和部分教师接口
