# routes/console.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Mail\TeacherInvitationMail;
 use Illuminate\Foundation\Inspiring;
 
 /*
@@ -11,8 +12,19 @@ use Illuminate\Foundation\Inspiring;
 | commands. Each Closure is bound to a command instance allowing a
 | simple approach to interacting with each command's IO methods.
 |
-*/
+ */
 
 Artisan::command('inspire', function () {
     $this->comment(Inspiring::quote());
 })->describe('Display an inspiring quote');
+
+Artisan::command('test', function () {
+    $user = \App\User::find(1);
+    // Creating a token without scopes...
+    $token = $user->createToken('token')->accessToken;
+    echo $token;
+})->describe('test');
+
+Artisan::command('mail', function () {
+    \Mail::to('491559675@qq.com')->send(new TeacherInvitationMail());
+})->describe('mail test');
